# CWShopRust

./: .env  Cargo.toml  docker-compose.yml  ervices
curl/: login.sh  signin.sh
libs/lib-utils/: Cargo.toml
libs/lib-utils/src/: .validation.rs.rustfmt  lib.rs
libs/lib-utils/src/validation/: macros.rs  mod.rs
migrations/: 0001_users_table.sql  0002_basket_table.sql  0003_admins_table.sql  0004_product_table.sql  0005_comments_table.sql  1002_basket_relations.sql  1005_comments_relations.sql
src/: main.rs  services.rs
src/app/controllers/: mod.rs  user.rs
src/app/models/: mod.rs  user.rs  validation.rs
src/app/models/user/: auth.rs  mod.rs
src/repository/: cache.rs  db.rs  mod.rs
